unpackaged/main/default/objects/Notes__c/Notes__c.object-meta.xml
<CustomObject>
    <label>Notes</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>