unpackaged/main/default/objects/Notes__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>TEXT(MONTH( DATEVALUE(CreatedDate) ))+&quot;/&quot; +
TEXT(DAY(DATEVALUE(CreatedDate)))+&quot;/&quot; +
TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Text</type>
</CustomField>