unpackaged/main/default/objects/Notes__c/fields/CRS_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>CRS_Delivery_Method__c</fullName>
    <label>CRS Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Printed</fullName>
            </value>
            <value>
                <fullName>Mailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>