unpackaged/main/default/objects/Notes__c/fields/CRS_Version_Delivered__c.field-meta.xml
<CustomField>
    <fullName>CRS_Version_Delivered__c</fullName>
    <label>CRS Version Delivered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Version 1</fullName>
                <default>true</default>
                <label>Version 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>