unpackaged/main/default/objects/Notes__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notes (Household)</relationshipLabel>
    <relationshipName>Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>