unpackaged/main/default/objects/Notes__c/fields/Redtail_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Redtail_Contact_Id__c</fullName>
    <label>Redtail Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>