unpackaged/main/default/objects/Notes__c/fields/Redtail_Note_Id__c.field-meta.xml
<CustomField>
    <fullName>Redtail_Note_Id__c</fullName>
    <externalId>true</externalId>
    <label>Redtail Note Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>