unpackaged/main/default/objects/Notes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Client__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>NAME</columns>
    <columns>Note__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>