unpackaged/main/default/objects/Notes__c/listViews/Search.listView-meta.xml
<ListView>
    <fullName>Search</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Note__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Redtail_Contact_Id__c</columns>
    <columns>Redtail_Note_Id__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Financial_Account__c</field>
        <operation>contains</operation>
        <value>kennedy</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>notEqual</operation>
        <value>sastone</value>
    </filters>
    <label>Search</label>
    <sharedTo>
        <group>Manage_Notes_Team</group>
    </sharedTo>
</ListView>